	PR middle-end/22239 	* loop.c (loop_givs_rescan): Check that v->new_reg is a REG.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@101742 138bc75d-0d04-0410-961f-82ee72b054a4